# urll

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  build.yml  dstlled-diff.yml  lint.yml  main.yml  pr.yml
src/: args.rs  main.rs
src/domain/: page.rs
src/service/: fetch.rs
src/tui/: app.rs  command.rs  common.rs  event.rs  handle.rs  message.rs  mod.rs  model.rs  update.rs  view.rs
src/tui/static/: help.txt
