[package]
name = "urll"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
open = "5.3.3"
ratatui = "0.30.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
scraper = "0.25.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.4"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
