[package]
name = "urll"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
open = "5.3.4"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
scraper = "0.26.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
